[gd_scene load_steps=4 format=3 uid="uid://b0sola5y5vucy"]

[ext_resource type="Script" uid="uid://b7hcyw6l8024j" path="res://Interactions/interaction_component.gd" id="1_ekoyg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6pslk"]
radius = 54.0833

[sub_resource type="LabelSettings" id="LabelSettings_6pslk"]

[node name="InteractionComponent" type="Node2D"]
script = ExtResource("1_ekoyg")

[node name="InteractRange" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
shape = SubResource("CircleShape2D_6pslk")

[node name="InteractLabel" type="Label" parent="."]
z_index = 15
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -78.0
offset_right = 52.5
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "[F] to Interact"
label_settings = SubResource("LabelSettings_6pslk")

[connection signal="area_entered" from="InteractRange" to="." method="_on_interact_range_area_entered"]
[connection signal="area_exited" from="InteractRange" to="." method="_on_interact_range_area_exited"]
